// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColorColorPicker Hex snapshot 1`] = `
<DocumentFragment>
  <div
    class="react-colorful"
  >
    <div
      class="react-colorful__saturation"
      style="background-color: rgb(0, 0, 0);"
    >
      <div
        aria-label="Color"
        aria-valuetext="Saturation 69%, Brightness 87%"
        class="react-colorful__interactive"
        role="slider"
        tabindex="0"
      >
        <div
          class="react-colorful__pointer react-colorful__saturation-pointer"
          style="top: 13%; left: 69%;"
        >
          <div
            class="react-colorful__pointer-fill"
            style="background-color: rgb(69, 69, 69);"
          />
        </div>
      </div>
    </div>
    <div
      class="react-colorful__hue react-colorful__last-control"
    >
      <div
        aria-label="Hue"
        aria-valuetext="353"
        class="react-colorful__interactive"
        role="slider"
        tabindex="0"
      >
        <div
          class="react-colorful__pointer react-colorful__hue-pointer"
          style="top: 50%; left: 98.05555555555556%;"
        >
          <div
            class="react-colorful__pointer-fill"
            style="background-color: rgb(0, 0, 0);"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    style="padding-top: 10px; font-weight: bold;"
  >
    #dd4455
  </div>
</DocumentFragment>
`;

exports[`ColorColorPicker Rgb snapshot 1`] = `
<DocumentFragment>
  <div
    class="react-colorful"
  >
    <div
      class="react-colorful__saturation"
      style="background-color: rgb(0, 0, 0);"
    >
      <div
        aria-label="Color"
        aria-valuetext="Saturation 89%, Brightness 75%"
        class="react-colorful__interactive"
        role="slider"
        tabindex="0"
      >
        <div
          class="react-colorful__pointer react-colorful__saturation-pointer"
          style="top: 25%; left: 89%;"
        >
          <div
            class="react-colorful__pointer-fill"
            style="background-color: rgb(21, 21, 21);"
          />
        </div>
      </div>
    </div>
    <div
      class="react-colorful__hue react-colorful__last-control"
    >
      <div
        aria-label="Hue"
        aria-valuetext="287"
        class="react-colorful__interactive"
        role="slider"
        tabindex="0"
      >
        <div
          class="react-colorful__pointer react-colorful__hue-pointer"
          style="top: 50%; left: 79.72222222222223%;"
        >
          <div
            class="react-colorful__pointer-fill"
            style="background-color: rgb(0, 0, 0);"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    style="padding-top: 10px; font-weight: bold;"
  >
    {
  "r": 154,
  "g": 22,
  "b": 192
}
  </div>
</DocumentFragment>
`;
